--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </header>
           <a href="#work" class="jumplink pic">
             <span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-            <img src="images/me.jpeg" alt="" />
+            <img src="images/depan.PNG" alt="" />
           </a>
         </article>
 
