--- a/index.html
+++ b/index.html
@@ -35,20 +35,26 @@
         <!-- Work -->
         <article id="work" class="panel">
           <header>
-            <h2>Website</h2>
+            <h2>Portofolio</h2>
           </header>
-          <p>Jurusan Teknik Arsitektur - Politeknik Negeri Pontianak</p>
           <section>
             <div class="row">
               <div class="col-4 col-6-medium col-12-small">
-                <a href="#" class="image fit"><img src="images/1111.PNG" alt="" /></a>
+                <a href="https://griyapristi.com" class="image fit"><img src="images/web-porto.png" alt="" /></a>
               </div>
-              <div class="col-4 col-6-medium col-12-small">
-                <a href="#" class="image fit"><img src="images/ww.PNG" alt="" /></a>
-              </div>
-              <div class="col-4 col-6-medium col-12-small">
-                <a href="#" class="image fit"><img src="images/ee.PNG" alt="" /></a>
-              </div>
+              <p>Jasa Bangun dan Konsultan - Griya Pristi</p>
+              <section>
+                <div class="row">
+                  <div class="col-4 col-6-medium col-12-small">
+                    <a href="https://arsitektur.polnep.ac.id/" class="image fit"><img src="images/1111.PNG" alt="" /></a>
+                  </div>
+                  <p>Jurusan Teknik Arsitektur - Politeknik Negeri Pontianak</p>
+                  <section>
+                    <div class="row">
+                      <div class="col-4 col-6-medium col-12-small">
+                        <a href="https://arsolut.site/" class="image fit"><img src="images/caaaa.PNG" alt="" /></a>
+                      </div>
+                      <p>Jasa Pembuatan Website - Arsolut</p>
             </div>
           </section>
         </article>
