--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       <nav id="nav">
         <a href="#" class="icon solid fa-home"><span>Home</span></a>
         <a href="#work" class="icon solid fa-folder"><span>Work</span></a>
-        <a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
         <a href="https://instagram.com/fcipher98" class="icon brands fa-instagram"><span>Instagram</span></a>
       </nav>
 
@@ -52,41 +51,18 @@
                   <section>
                     <div class="row">
                       <div class="col-4 col-6-medium col-12-small">
-                        <a href="https://arsolut.site/" class="image fit"><img src="images/caaaa.PNG" alt="" /></a>
+                        <a href="https://arsolut.site/" class="image fit"><img src="images/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.PNG" alt="" /></a>
                       </div>
                       <p>Jasa Pembuatan Website - Arsolut</p>
+                  <section>
+                    <div class="row">
+                      <div class="col-4 col-6-medium col-12-small">
+                        <a href="https://nikahyuk.id/" class="image fit"><img src="images/Beranda - Teman Pernikahan.png" alt="" /></a>
+                      </div>
+                      <p>Undangan Pernikahan Website - Teman Pernikahan</p>
             </div>
           </section>
         </article>
-
-        <!-- Contact -->
-        <article id="contact" class="panel">
-          <header>
-            <h2>Contact Me</h2>
-          </header>
-          <form action="#" method="post">
-            <div>
-              <div class="row">
-                <div class="col-6 col-12-medium">
-                  <input type="text" name="name" placeholder="Name" />
-                </div>
-                <div class="col-6 col-12-medium">
-                  <input type="text" name="email" placeholder="Email" />
-                </div>
-                <div class="col-12">
-                  <input type="text" name="subject" placeholder="Subject" />
-                </div>
-                <div class="col-12">
-                  <textarea name="message" placeholder="Message" rows="6"></textarea>
-                </div>
-                <div class="col-12">
-                  <input type="submit" value="Send Message" />
-                </div>
-              </div>
-            </div>
-          </form>
-        </article>
-      </div>
 
       <!-- Footer -->
       <div id="footer">
