--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
                         <a href="https://nikahyuk.id/" class="image fit"><img src="images/Beranda - Teman Pernikahan.png" alt="" /></a>
                       </div>
                       <p>Undangan Pernikahan Website - Teman Pernikahan</p>
+                    </section>
+                  </section>
+                </section>
+              </section>
             </div>
           </section>
         </article>
