--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <article id="home" class="panel intro">
           <header>
             <h1>Furqan</h1>
-            <p>Front-end at Arsolut</p>
+            <p>Web Developer</p>
           </header>
           <a href="#work" class="jumplink pic">
             <span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
