--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <article id="home" class="panel intro">
           <header>
             <h1>Furqan</h1>
-            <p>Pemain Klarinet</p>
+            <p>IT Support</p>
           </header>
           <a href="#work" class="jumplink pic">
             <span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-            <img src="images/depan.png" alt="" />
+            <img src="images/f.png" alt="" />
           </a>
         </article>
 
