--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <section>
                 <div class="row">
                   <div class="col-4 col-6-medium col-12-small">
-                    <a href="https://arsitektur.polnep.ac.id/" class="image fit"><img src="images/1111.PNG" alt="" /></a>
+                    <a href="https://arsitektur.polnep.ac.id/" class="image fit"><img src="images/ww.PNG" alt="" /></a>
                   </div>
                   <p>Jurusan Teknik Arsitektur - Politeknik Negeri Pontianak</p>
                   <section>
