--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav id="nav">
         <a href="#" class="icon solid fa-home"><span>Home</span></a>
         <a href="#work" class="icon solid fa-folder"><span>Work</span></a>
-        <a href="https://instagram.com/fcipher98" class="icon brands fa-instagram"><span>Instagram</span></a>
+        <a href="https://instagram.com/liminalspace98" class="icon brands fa-instagram"><span>Instagram</span></a>
       </nav>
 
       <!-- Main -->
